--- a/.github/workflows/yapf.yml
+++ b/.github/workflows/yapf.yml
@@ -1,28 +1,55 @@
-name: Format Python
+name: YAPF Formatter
+
 on:
   push:
     paths:
-    - '**.py'
+      - "**.py"
+
 jobs:
-  autoyapf:
+  build:
+    name: YAPF Formatter
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@master
+      - name: checkout repo
+        uses: actions/checkout@v2.3.4
         with:
-          ref: ${{ github.head_ref }}
-      - name: autoyapf
-        id: autoyapf
-        uses: mritunjaysharma394/autoyapf@v2
+          repository: ${{ github.repository }}
+          token: ${{ github.token }}
+
+      - name: YAPF Formatter
+        uses: diegovalenzuelaiturra/yapf-action@master
         with:
-          args: --recursive --in-place .
-      - name: Check for modified files
-        id: git-check
-        run: echo ::set-output name=modified::$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)
-      - name: Push changes
-        if: steps.git-check.outputs.modified == 'true'
+          args: . --verbose --recursive --in-place --parallel
+
+      - name: action metadata
         run: |
-          git config --global user.name 'github-actions' 
-          git config --global user.email 'github-actions@github.com' 
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-          git commit -am "Automated autoyapf fixes"
+          echo -e "action     : ${{ github.action }}"
+          echo -e "actor      : ${{ github.actor }}"
+          echo -e "event_name : ${{ github.event_name }}"
+          echo -e "job        : ${{ github.job }}"
+          echo -e "ref        : ${{ github.ref }}"
+          echo -e "repository : ${{ github.repository }}"
+          echo -e "run_id     : ${{ github.run_id }}"
+          echo -e "sha        : ${{ github.sha }}"
+          echo -e "workflow   : ${{ github.workflow }}"
+          echo -e "workspace  : ${{ github.workspace }}"
+
+      - name: config github
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+
+      - name: add changes
+        run: |
+          git add .
+
+      - name: commit changes
+        run: |
+          git commit -m "Automated YAPF Formatting" --all | exit 0
+
+      # NOTE : only push changes when the source branch is being pushed to master (target branch)
+      - name: push changes
+        if: github.ref == 'refs/heads/master'
+        run: |
           git push
