give yapf action appropriate permissions

--- a/.github/workflows/yapf.yml
+++ b/.github/workflows/yapf.yml
@@ -9,6 +9,8 @@ jobs:
   build:
     name: YAPF Formatter
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - name: checkout repo
