add dockerfile update packages

--- a/environment.yml
+++ b/environment.yml
@@ -112,10 +112,12 @@ dependencies:
       - pyjwt==2.8.0
       - pymongo==4.5.0
       - pyqt5-sip==12.11.0
+      - python-dotenv==1.0.0
       - redis==5.0.1
       - requests==2.31.0
       - tomli==2.0.1
       - urllib3==2.0.6
+      - waitress==2.1.2
       - werkzeug==3.0.0
       - yapf==0.40.2
       - zipp==3.17.0
