add ta-lib submodule

--- a/environment.yml
+++ b/environment.yml
@@ -88,7 +88,6 @@ dependencies:
   - sip=6.6.2
   - six=1.16.0
   - sqlite=3.41.2
-  - ta-lib=0.4.28
   - tk=8.6.12
   - toml=0.10.2
   - tornado=6.3.3
@@ -98,6 +97,7 @@ dependencies:
   - zlib=1.2.13
   - zstd=1.5.5
   - pip:
+      - ta-lib==0.4.28
       - blinker==1.6.3
       - certifi==2023.7.22
       - dnspython==2.4.2
