--- a/environment.yml
+++ b/environment.yml
@@ -3,101 +3,103 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
-  - blas=1.1
-  - brotli=1.0.9
-  - brotli-bin=1.0.9
-  - bzip2=1.0.8
-  - ca-certificates=2023.08.22
-  - contourpy=1.0.5
-  - cycler=0.11.0
-  - cyrus-sasl=2.1.28
-  - dbus=1.13.18
-  - expat=2.5.0
-  - fontconfig=2.14.1
-  - fonttools=4.25.0
-  - freetype=2.12.1
-  - giflib=5.2.1
-  - glib=2.69.1
-  - gst-plugins-base=1.14.1
-  - gstreamer=1.14.1
-  - icu=58.2
-  - jpeg=9e
-  - kiwisolver=1.4.4
-  - krb5=1.20.1
-  - lcms2=2.12
-  - ld_impl_linux-64=2.38
-  - lerc=3.0
-  - libbrotlicommon=1.0.9
-  - libbrotlidec=1.0.9
-  - libbrotlienc=1.0.9
-  - libclang=14.0.6
-  - libclang13=14.0.6
-  - libcups=2.4.2
-  - libdeflate=1.17
-  - libedit=3.1.20221030
-  - libevent=2.1.12
-  - libffi=3.3
-  - libgcc-ng=13.2.0
-  - libgfortran-ng=13.2.0
-  - libgfortran5=13.2.0
-  - libllvm14=14.0.6
-  - libopenblas=0.3.24
-  - libpng=1.6.39
-  - libpq=12.15
-  - libstdcxx-ng=11.2.0
-  - libta-lib=0.4.0
-  - libtiff=4.5.1
-  - libuuid=1.41.5
-  - libwebp=1.3.2
-  - libwebp-base=1.3.2
-  - libxcb=1.15
-  - libxkbcommon=1.0.1
-  - libxml2=2.10.4
-  - libxslt=1.1.37
-  - llvm-openmp=14.0.6
-  - lz4-c=1.9.4
-  - matplotlib=3.7.2
-  - matplotlib-base=3.7.2
-  - munkres=1.1.4
-  - mysql=5.7.24
-  - ncurses=6.4
-  - nspr=4.35
-  - nss=3.89.1
-  - numpy=1.26.0
-  - numpy-base=1.26.0
-  - openblas=0.3.24
-  - openjpeg=2.4.0
-  - openssl=1.1.1w
-  - packaging=23.1
-  - pcre=8.45
-  - pillow=10.0.1
-  - pip=23.2.1
-  - ply=3.11
-  - pyparsing=3.0.9
-  - pyqt=5.15.7
-  - python=3.10.0
-  - python-dateutil=2.8.2
-  - python_abi=3.10
-  - qt-main=5.15.2
-  - qt-webengine=5.15.9
-  - qtwebkit=5.212
-  - readline=8.2
-  - setuptools=68.0.0
-  - sip=6.6.2
-  - six=1.16.0
-  - sqlite=3.41.2
-  - tk=8.6.12
-  - toml=0.10.2
-  - tornado=6.3.3
-  - tzdata=2023c
-  - wheel=0.41.2
-  - xz=5.4.2
-  - zlib=1.2.13
-  - zstd=1.5.5
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_kmp_llvm
+  - binutils_linux-64=2.28.1=he4fe6c7_1
+  - blas=1.1=openblas
+  - brotli=1.0.9=h5eee18b_7
+  - brotli-bin=1.0.9=h5eee18b_7
+  - bzip2=1.0.8=h7b6447c_0
+  - ca-certificates=2023.08.22=h06a4308_0
+  - contourpy=1.0.5=py310hdb19cb5_0
+  - cycler=0.11.0=pyhd3eb1b0_0
+  - cyrus-sasl=2.1.28=h9c0eb46_1
+  - dbus=1.13.18=hb2f20db_0
+  - expat=2.5.0=h6a678d5_0
+  - fontconfig=2.14.1=h4c34cd2_2
+  - fonttools=4.25.0=pyhd3eb1b0_0
+  - freetype=2.12.1=h4a9f257_0
+  - gcc_linux-64=7.2.0=hc7b1ceb_1
+  - giflib=5.2.1=h5eee18b_3
+  - glib=2.69.1=h4ff587b_1
+  - gst-plugins-base=1.14.1=h6a678d5_1
+  - gstreamer=1.14.1=h5eee18b_1
+  - icu=58.2=he6710b0_3
+  - jpeg=9e=h5eee18b_1
+  - kiwisolver=1.4.4=py310h6a678d5_0
+  - krb5=1.20.1=h568e23c_1
+  - lcms2=2.12=h3be6417_0
+  - ld_impl_linux-64=2.38=h1181459_1
+  - lerc=3.0=h295c915_0
+  - libbrotlicommon=1.0.9=h5eee18b_7
+  - libbrotlidec=1.0.9=h5eee18b_7
+  - libbrotlienc=1.0.9=h5eee18b_7
+  - libclang=14.0.6=default_hc6dbbc7_1
+  - libclang13=14.0.6=default_he11475f_1
+  - libcups=2.4.2=ha637b67_0
+  - libdeflate=1.17=h5eee18b_1
+  - libedit=3.1.20221030=h5eee18b_0
+  - libevent=2.1.12=h8f2d780_0
+  - libffi=3.3=he6710b0_2
+  - libgcc-ng=13.2.0=h807b86a_2
+  - libgfortran-ng=13.2.0=h69a702a_2
+  - libgfortran5=13.2.0=ha4646dd_2
+  - libllvm14=14.0.6=hef93074_0
+  - libopenblas=0.3.24=pthreads_h413a1c8_0
+  - libpng=1.6.39=h5eee18b_0
+  - libpq=12.15=h37d81fd_1
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - libta-lib=0.4.0=hd590300_2
+  - libtiff=4.5.1=h6a678d5_0
+  - libuuid=1.41.5=h5eee18b_0
+  - libwebp=1.3.2=h11a3e52_0
+  - libwebp-base=1.3.2=h5eee18b_0
+  - libxcb=1.15=h7f8727e_0
+  - libxkbcommon=1.0.1=h5eee18b_1
+  - libxml2=2.10.4=hcbfbd50_0
+  - libxslt=1.1.37=h2085143_0
+  - llvm-openmp=14.0.6=h9e868ea_0
+  - lz4-c=1.9.4=h6a678d5_0
+  - matplotlib=3.7.2=py310h06a4308_0
+  - matplotlib-base=3.7.2=py310h1128e8f_0
+  - munkres=1.1.4=py_0
+  - mysql=5.7.24=he378463_2
+  - ncurses=6.4=h6a678d5_0
+  - nspr=4.35=h6a678d5_0
+  - nss=3.89.1=h6a678d5_0
+  - numpy=1.26.0=py310heeff2f4_0
+  - numpy-base=1.26.0=py310h8a23956_0
+  - openblas=0.3.24=pthreads_h7a3da1a_0
+  - openjpeg=2.4.0=h3ad879b_0
+  - openssl=1.1.1w=h7f8727e_0
+  - packaging=23.1=py310h06a4308_0
+  - pcre=8.45=h295c915_0
+  - pillow=10.0.1=py310ha6cbd5a_0
+  - pip=23.2.1=py310h06a4308_0
+  - ply=3.11=py310h06a4308_0
+  - pyparsing=3.0.9=py310h06a4308_0
+  - pyqt=5.15.7=py310h6a678d5_1
+  - python=3.10.0=h12debd9_5
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python_abi=3.10=2_cp310
+  - qt-main=5.15.2=h5b8104b_9
+  - qt-webengine=5.15.9=h9ab4d14_7
+  - qtwebkit=5.212=h3fafdc1_5
+  - readline=8.2=h5eee18b_0
+  - setuptools=68.0.0=py310h06a4308_0
+  - sip=6.6.2=py310h6a678d5_0
+  - six=1.16.0=pyhd3eb1b0_1
+  - sqlite=3.41.2=h5eee18b_0
+  - ta-lib=0.4.28=py310h1f7b6fc_0
+  - tk=8.6.12=h1ccaba5_0
+  - toml=0.10.2=pyhd3eb1b0_0
+  - tornado=6.3.3=py310h5eee18b_0
+  - tzdata=2023c=h04d1e81_0
+  - wheel=0.41.2=py310h06a4308_0
+  - xz=5.4.2=h5eee18b_0
+  - zlib=1.2.13=h5eee18b_0
+  - zstd=1.5.5=hc292b87_0
   - pip:
-      - ta-lib==0.4.28
       - blinker==1.6.3
       - certifi==2023.7.22
       - dnspython==2.4.2
