--- a/environment.yml
+++ b/environment.yml
@@ -5,47 +5,47 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - binutils_linux-64=2.28.1
   - blas=1.1
+  - blinker=1.7.0
   - brotli=1.0.9
-  - brotli-bin=1.0.9
   - bzip2=1.0.8
-  - ca-certificates=2023.08.22
-  - contourpy=1.0.5
-  - cycler=0.11.0
-  - cyrus-sasl=2.1.28
+  - ca-certificates=2023.11.17
+  - click=8.1.7
+  - contourpy=1.2.0
+  - cycler=0.12.1
   - dbus=1.13.18
-  - expat=2.5.0
+  - expat=2.2.10
+  - flask=3.0.0
   - fontconfig=2.14.1
   - fonttools=4.25.0
-  - freetype=2.12.1
-  - gcc_linux-64=7.2.0
+  - freetype=2.10.4
   - giflib=5.2.1
   - glib=2.69.1
   - gst-plugins-base=1.14.1
   - gstreamer=1.14.1
   - icu=58.2
+  - importlib-metadata=6.8.0
+  - itsdangerous=2.1.2
+  - jinja2=3.1.2
   - jpeg=9e
   - kiwisolver=1.4.4
   - krb5=1.20.1
   - lcms2=2.12
   - ld_impl_linux-64=2.38
   - lerc=3.0
-  - libbrotlicommon=1.0.9
-  - libbrotlidec=1.0.9
-  - libbrotlienc=1.0.9
-  - libclang=14.0.6
-  - libclang13=14.0.6
-  - libcups=2.4.2
+  - libblas=3.9.0
+  - libcblas=3.9.0
+  - libclang=10.0.1
   - libdeflate=1.17
   - libedit=3.1.20221030
   - libevent=2.1.12
-  - libffi=3.3
+  - libffi=3.4.4
   - libgcc-ng=13.2.0
   - libgfortran-ng=13.2.0
   - libgfortran5=13.2.0
-  - libllvm14=14.0.6
-  - libopenblas=0.3.24
+  - liblapack=3.9.0
+  - libllvm10=10.0.1
+  - libopenblas=0.3.20
   - libpng=1.6.39
   - libpq=12.15
   - libstdcxx-ng=11.2.0
@@ -56,70 +56,57 @@ dependencies:
   - libwebp-base=1.3.2
   - libxcb=1.15
   - libxkbcommon=1.0.1
-  - libxml2=2.10.4
-  - libxslt=1.1.37
+  - libxml2=2.9.14
   - llvm-openmp=14.0.6
   - lz4-c=1.9.4
-  - matplotlib=3.7.2
-  - matplotlib-base=3.7.2
+  - markupsafe=2.1.3
+  - matplotlib=3.8.0
+  - matplotlib-base=3.8.0
   - munkres=1.1.4
-  - mysql=5.7.24
   - ncurses=6.4
   - nspr=4.35
   - nss=3.89.1
-  - numpy=1.26.0
-  - numpy-base=1.26.0
-  - openblas=0.3.24
-  - openjpeg=2.4.0
-  - openssl=1.1.1w
-  - packaging=23.1
+  - numpy=1.24.3
+  - numpy-base=1.24.3
+  - openblas=0.3.20
+  - openssl=3.2.0
+  - packaging=23.2
   - pcre=8.45
-  - pillow=10.0.1
-  - pip=23.2.1
+  - pillow=9.4.0
+  - pip=23.3.1
+  - platformdirs=4.0.0
   - ply=3.11
   - pyparsing=3.0.9
-  - pyqt=5.15.7
-  - python=3.10.0
+  - pyqt=5.15.10
+  - pyqt5-sip=12.13.0
+  - python=3.10.13
   - python-dateutil=2.8.2
   - python_abi=3.10
   - qt-main=5.15.2
-  - qt-webengine=5.15.9
-  - qtwebkit=5.212
   - readline=8.2
   - setuptools=68.0.0
-  - sip=6.6.2
+  - sip=6.7.12
   - six=1.16.0
   - sqlite=3.41.2
   - ta-lib=0.4.28
   - tk=8.6.12
-  - toml=0.10.2
-  - tornado=6.3.3
+  - tomli=2.0.1
+  - tornado=6.1
+  - typing_extensions=4.8.0
   - tzdata=2023c
+  - waitress=2.1.2
+  - werkzeug=3.0.1
   - wheel=0.41.2
   - xz=5.4.2
+  - yapf=0.40.1
+  - zipp=3.17.0
   - zlib=1.2.13
   - zstd=1.5.5
   - pip:
       - backtrader==1.9.78.123
-      - blinker==1.6.3
-      - certifi==2023.7.22
       - dnspython==2.4.2
-      - flask==3.0.0
-      - idna==3.4
-      - itsdangerous==2.1.2
-      - jinja2==3.1.2
-      - markupsafe==2.1.3
-      - platformdirs==3.11.0
+      - hiredis==2.2.3
       - pyjwt==2.8.0
-      - pymongo==4.5.0
-      - pyqt5-sip==12.11.0
-      - python-dotenv==1.0.0
-      - requests==2.31.0
-      - schedule==1.2.1
-      - tomli==2.0.1
-      - urllib3==2.0.6
-      - waitress==2.1.2
-      - werkzeug==3.0.0
-      - yapf==0.40.2
-      - zipp==3.17.0
+      - pymongo==4.6.0
+      - redis==5.0.1
 prefix: /home/celestial/anaconda3/envs/auto-trading
