--- a/environment.yml
+++ b/environment.yml
@@ -1,120 +1,75 @@
-name: auto-trading
+name: base
 channels:
-  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
-  - binutils_linux-64=2.28.1
-  - blas=1.1
-  - blinker=1.7.0
-  - brotli=1.0.9
+  - _openmp_mutex=5.1
+  - archspec=0.2.1
+  - boltons=23.0.0
+  - brotli-python=1.0.9
   - bzip2=1.0.8
+  - c-ares=1.19.1
   - ca-certificates=2023.08.22
-  - click=8.1.7
-  - contourpy=1.2.0
-  - cycler=0.12.1
-  - dbus=1.13.18
-  - expat=2.2.10
-  - flask=3.0.0
-  - fontconfig=2.14.1
-  - fonttools=4.25.0
-  - freetype=2.10.4
-  - gcc_linux-64=7.2.0
-  - giflib=5.2.1
-  - glib=2.69.1
-  - gst-plugins-base=1.14.1
-  - gstreamer=1.14.1
-  - icu=58.2
-  - importlib-metadata=6.8.0
-  - itsdangerous=2.1.2
-  - jinja2=3.1.2
-  - jpeg=9e
-  - kiwisolver=1.4.4
+  - certifi=2023.7.22
+  - cffi=1.15.1
+  - charset-normalizer=2.0.4
+  - conda=23.10.0
+  - conda-content-trust=0.2.0
+  - conda-libmamba-solver=23.11.1
+  - conda-package-handling=2.2.0
+  - conda-package-streaming=0.9.0
+  - cryptography=41.0.3
+  - fmt=9.1.0
+  - icu=73.1
+  - idna=3.4
+  - jsonpatch=1.32
+  - jsonpointer=2.1
   - krb5=1.20.1
-  - lcms2=2.12
   - ld_impl_linux-64=2.38
-  - lerc=3.0
-  - libblas=3.9.0
-  - libcblas=3.9.0
-  - libclang=10.0.1
-  - libdeflate=1.17
+  - libarchive=3.6.2
+  - libcurl=8.4.0
   - libedit=3.1.20221030
-  - libevent=2.1.12
+  - libev=4.33
   - libffi=3.4.4
-  - libgcc-ng=13.2.0
-  - libgfortran-ng=13.2.0
-  - libgfortran5=13.2.0
-  - liblapack=3.9.0
-  - libllvm10=10.0.1
-  - libopenblas=0.3.20
-  - libpng=1.6.39
-  - libpq=12.15
+  - libgcc-ng=11.2.0
+  - libgomp=11.2.0
+  - libmamba=1.5.3
+  - libmambapy=1.5.3
+  - libnghttp2=1.57.0
+  - libsolv=0.7.24
+  - libssh2=1.10.0
   - libstdcxx-ng=11.2.0
-  - libta-lib=0.4.0
-  - libtiff=4.5.1
   - libuuid=1.41.5
-  - libwebp=1.3.2
-  - libwebp-base=1.3.2
-  - libxcb=1.15
-  - libxkbcommon=1.0.1
-  - libxml2=2.9.14
-  - llvm-openmp=14.0.6
+  - libxml2=2.10.4
   - lz4-c=1.9.4
-  - markupsafe=2.1.3
-  - matplotlib=3.8.0
-  - matplotlib-base=3.8.0
-  - munkres=1.1.4
   - ncurses=6.4
-  - nspr=4.35
-  - nss=3.89.1
-  - numpy=1.24.3
-  - numpy-base=1.24.3
-  - openblas=0.3.20
   - openssl=3.0.12
-  - packaging=23.2
-  - pcre=8.45
-  - pillow=9.4.0
-  - pip=23.3.1
-  - platformdirs=4.0.0
-  - ply=3.11
-  - pyparsing=3.0.9
-  - pyqt=5.15.10
-  - pyqt5-sip=12.13.0
-  - python=3.10.13
-  - python-dateutil=2.8.2
-  - python_abi=3.10
-  - qt-main=5.15.2
+  - packaging=23.1
+  - pcre2=10.42
+  - pip=23.3
+  - pluggy=1.0.0
+  - pybind11-abi=4
+  - pycosat=0.6.6
+  - pycparser=2.21
+  - pyopenssl=23.2.0
+  - pysocks=1.7.1
+  - python=3.11.5
   - readline=8.2
+  - reproc=14.2.4
+  - reproc-cpp=14.2.4
+  - requests=2.31.0
+  - ruamel.yaml=0.17.21
   - setuptools=68.0.0
-  - sip=6.7.12
-  - six=1.16.0
   - sqlite=3.41.2
-  - ta-lib=0.4.28
   - tk=8.6.12
-  - tomli=2.0.1
-  - tornado=6.1
-  - typing_extensions=4.8.0
+  - tqdm=4.65.0
+  - truststore=0.8.0
   - tzdata=2023c
-  - waitress=2.1.2
-  - werkzeug=3.0.1
+  - urllib3=1.26.18
   - wheel=0.41.2
   - xz=5.4.2
-  - yapf=0.40.1
-  - zipp=3.17.0
+  - yaml-cpp=0.8.0
   - zlib=1.2.13
+  - zstandard=0.19.0
   - zstd=1.5.5
-  - pip:
-      - backtrader==1.9.78.123
-      - certifi==2023.11.17
-      - dnspython==2.4.2
-      - hiredis==2.2.3
-      - idna==3.6
-      - pyjwt==2.8.0
-      - pymongo==4.6.0
-      - python-dotenv==1.0.0
-      - redis==5.0.1
-      - requests==2.31.0
-      - schedule==1.2.1
-      - urllib3==2.1.0
-prefix: /home/celestial/anaconda3/envs/auto-trading
+prefix: /home/fox/miniconda3
