--- a/environment.yml
+++ b/environment.yml
@@ -5,11 +5,12 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
+  - binutils_linux-64=2.28.1
   - blas=1.1
   - blinker=1.7.0
   - brotli=1.0.9
   - bzip2=1.0.8
-  - ca-certificates=2023.11.17
+  - ca-certificates=2023.08.22
   - click=8.1.7
   - contourpy=1.2.0
   - cycler=0.12.1
@@ -19,6 +20,7 @@ dependencies:
   - fontconfig=2.14.1
   - fonttools=4.25.0
   - freetype=2.10.4
+  - gcc_linux-64=7.2.0
   - giflib=5.2.1
   - glib=2.69.1
   - gst-plugins-base=1.14.1
@@ -69,7 +71,7 @@ dependencies:
   - numpy=1.24.3
   - numpy-base=1.24.3
   - openblas=0.3.20
-  - openssl=3.2.0
+  - openssl=3.0.12
   - packaging=23.2
   - pcre=8.45
   - pillow=9.4.0
@@ -104,9 +106,17 @@ dependencies:
   - zstd=1.5.5
   - pip:
       - backtrader==1.9.78.123
+      - certifi==2023.11.17
       - dnspython==2.4.2
+      - flask-cors==4.0.0
       - hiredis==2.2.3
+      - idna==3.6
+      - mpld3==0.5.9
       - pyjwt==2.8.0
       - pymongo==4.6.0
+      - python-dotenv==1.0.0
       - redis==5.0.1
+      - requests==2.31.0
+      - schedule==1.2.1
+      - urllib3==2.1.0
 prefix: /home/celestial/anaconda3/envs/auto-trading
