--- a/environment.yml
+++ b/environment.yml
@@ -10,7 +10,7 @@ dependencies:
   - blinker=1.7.0
   - brotli=1.0.9
   - bzip2=1.0.8
-  - ca-certificates=2023.08.22
+  - ca-certificates=2023.12.12
   - click=8.1.7
   - contourpy=1.2.0
   - cycler=0.12.1
@@ -25,6 +25,7 @@ dependencies:
   - glib=2.69.1
   - gst-plugins-base=1.14.1
   - gstreamer=1.14.1
+  - gunicorn=20.1.0
   - icu=58.2
   - importlib-metadata=6.8.0
   - itsdangerous=2.1.2
@@ -96,7 +97,6 @@ dependencies:
   - tornado=6.1
   - typing_extensions=4.8.0
   - tzdata=2023c
-  - waitress=2.1.2
   - werkzeug=3.0.1
   - wheel=0.41.2
   - xz=5.4.2
